Added navigation from login to home

--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
         <h1>Welcome to the final website</h1>
     </section>
     <section style="height: 70%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <button type="button" style="color: azure; background-color: blue; border-radius: 0;">Sign in</button>
+        <button type="button" style=" background-color: blue; border-radius: 0;"><a href="home.html" style="color: azure;">Sign-in</a></button>
     </section>
 </body>
 </html>
