--- a/src/home.html
+++ b/src/home.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcom to the Web App</h1>
+    <h1>Welcome to the Web App</h1>
 </body>
 </html>
