--- a/home.html
+++ b/home.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <h1>Welcome to the Web App</h1>
+    <div class="main-body" style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; padding: 0.2rem;"></div>
+    <a href="index.html">Sign-Out</a>
 </body>
 </html>
