--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to the final website</h1>
     </section>
     <section style="height: 70%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <button type="button" onclick="test();" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="home.html" style="color: azure;">Sign-in</a></button>
+        <button type="button" onclick="test()" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="home.html" style="color: azure;">Sign-in</a></button>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </section>
 
