--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Welcome to the final website</h1>
     </section>
     <section style="height: 70%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <button id="btn-signIn" type="button" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="https://danieldanzo.github.io/Google-Verification-test/home.html" style="color: azure;">Sign-in</a></button>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <button id="btn-signIn" type="button" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="" style="color: azure;">Sign-in</a></button>
+
     </section>
 
     
