fixed import error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Login Page</title>
     <meta name="google-signin-client_id" content="729256465959-8ladu1rmi3ctqjvpjfs9qap68t15gvit.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="index.js" defer></script>
+    <script src="index.js" defer type="module"></script>
 </head>
 <body>
     <section style="width: 100%; text-align: center; display: flex; flex-direction: column;">
