--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </section>
     <section style="height: 70%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <button id="btn-signIn" type="button" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="" style="color: azure;">Sign-in</a></button>
-
+        <div class="g-signin2" onclick=""></div>
     </section>
 
     
