--- a/index.html
+++ b/index.html
@@ -3,20 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <meta name="google-signin-client_id" content="729256465959-8ladu1rmi3ctqjvpjfs9qap68t15gvit.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Sign Up for all users</title>
     <script src="index.js" defer type="module"></script>
 </head>
 <body>
-    <section style="width: 100%; text-align: center; display: flex; flex-direction: column;">
-        <h1>Welcome to the final website</h1>
-    </section>
-    <section style="height: 70%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-        <button id="btn-signIn" type="button" style=" background-color: blue; border-radius: 0;"><a id="aTag" href="" style="color: azure;">Sign-in</a></button>
-        <div class="g-signin2" onclick=""></div>
-    </section>
 
-    
+<header>
+    <h1>Sign Up Page</h1>
+</header>
+
+<main>
+    <form action="#" method="post">
+        <fieldset>
+            <legend>Your Information</legend>
+            <label for="fullname">Full Name:</label><br>
+            <input type="text" id="fullname" name="fullname" required><br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="ID">Id:</label><br>
+            <input type="text" id="ID" name="ID" required><br>
+
+            <label for="reason">Reason:</label><br>
+            <input type="text" id="Reason" name="Reason" required><br>
+
+            <label for="Type">Type:</label><br>
+            <select id="Type" name="Type" required>
+                <option value="Admin">Admin</option>
+                <option value="Fund-Manager">Fund-Manager</option>
+                <option value="Applicant">Applicant</option>
+            </select><br>
+
+        </fieldset>
+
+        <fieldset>
+            <legend>Additional Information</legend>
+            <label for="dob">Date of Birth:</label><br>
+            <input type="date" id="dob" name="dob"><br>
+
+            <label for="Province">Province:</label><br>
+            <select id="Province" name="Province">
+                <option value="Gauteng">Gauteng</option>
+                <option value="Western-Cape">Western</option>
+                <option value="Limpopo">Limpopo</option>
+                <option value="other">Other</option>
+            </select><br>
+
+            <label for="Gender">Gender:</label><br>
+            <select id="Gender" name="Gender">
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="other">Other</option>
+            </select><br>
+
+            <label for="Employed">Employed:</label><br>
+            <select id="Employed" name="Employed">
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+            </select><br>
+
+            <label for="Confirm">Confrimation Email:</label>
+            <input type="checkbox" id="ConfirmEmail" name="ConfirmEmail"><br>
+        </fieldset>
+
+        <button type="submit" id="btn-submit-signup">Sign Up</button>
+    </form>
+</main>
+
+<footer>
+    <p>&copy; 2024 Sign Up For LoyalAid</p>
+</footer>
+
 </body>
 </html>
