--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
         <section id="login-article">
             <h2>Login</h2>
             <article>
-                <a id="btn-applicant-login" href="#">Applicants</a>
-                <a id="btn-fundMangaer-login" href="#">Fund manager</a>
-                <a id="btn-platformAdmin-login" href="#">Platform Admin</a>
+
+                <button type="submit" id="btn-applicant-login">Applicants</button>
+                <button type="submit"  id="btn-fundMangaer-login">Fund manager</button>
+                <button type="submit" id="btn-platformAdmin-login">Platform Admin</button>
             </article> 
         </section>
         <section>
             <h2>Register</h2>
             <article>
-                <p>If you do not have an account, <a id="register-link" href="#">sign up</a></p>
+                <p>If you do not have an account, <a id="register-link">sign up</a></p>
             </article> 
         </section>
     </main>
