--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 </header>
 
 <main>
-    <form action="#" method="post">
+    <form >
         <fieldset>
             <legend>Your Information</legend>
             <label for="fullname">Full Name:</label><br>
