--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
             <input type="checkbox" id="ConfirmEmail" name="ConfirmEmail"><br>
         </fieldset>
 
-        <button type="submit" id="btn-submit-signup">Sign Up</button>
+        <button type="submit" id="btn-submit-signup" onclick="registerUser();">Sign Up</button>
     </form>
 </main>
 
