--- a/register.html
+++ b/register.html
@@ -69,7 +69,7 @@
 
         
     </form>
-    <button type="submit" id="btn-submit-signup" onclick="registerUser();">Sign Up</button>
+    <button type="submit" id="btn-submit-signup" onclick="signInUser();">Sign Up</button>
 </main>
 
 <footer>
