added register, js file

--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up for all users</title>
-    <script src="index.js" defer type="module"></script>
+    <script src="register.html" defer type="module"></script>
 </head>
 <body>
 
@@ -69,7 +69,7 @@
 
         
     </form>
-    <button type="submit" id="btn-submit-signup" onclick="signInUser();">Sign Up</button>
+    <button type="submit" id="btn-submit-signup" onclick="registerUser();">Sign Up</button>
 </main>
 
 <footer>
