fixed fundManager button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <article>
 
                 <button type="submit" id="btn-applicant-login">Applicants</button>
-                <button type="submit"  id="btn-fundMangaer-login">Fund manager</button>
+                <button type="submit"  id="btn-fundManager-login">Fund manager</button>
                 <button type="submit" id="btn-platformAdmin-login">Platform Admin</button>
             </article> 
         </section>
