replaced type submit with button

--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
             <label for="Confirm">Confrimation Email:</label>
             <input type="checkbox" id="ConfirmEmail" name="ConfirmEmail"><br>
         </fieldset>
-        <button type="submit" id="btn-submit-signup">Sign Up</button>
+        <button type="button" id="btn-submit-signup">Sign Up</button>
         
     </form>
     
