--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h2>Login</h2>
             <article>
 
-                <button type="submit" id="btn-applicant-login">Applicants</button>
-                <button type="submit"  id="btn-fundManager-login">Fund manager</button>
-                <button type="submit" id="btn-platformAdmin-login">Platform Admin</button>
+                <button type="button" id="btn-applicant-login">Applicants</button>
+                <button type="button"  id="btn-fundManager-login">Fund manager</button>
+                <button type="button" id="btn-platformAdmin-login">Platform Admin</button>
             </article> 
         </section>
         <section>
