--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to the Web App</h1>
     <p id="Client-info"></p>
-    <button type="button" id="signOut"></button>
+    <button type="button" id="signOut">Log Out</button>
     
 </body>
 </html>
