--- a/home.html
+++ b/home.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <script src="home.js"  defer type="module"></script>
+    <script src="db.js"  defer type="module"></script>
 </head>
 <body>
     <h1>Welcome to the Web App</h1>
     <p id="Client-info"></p>
     <button type="button" id="signOut">Log Out</button>
+    <button type="button" id="addSum">Add</button>
     
 </body>
 </html>
