--- a/home.html
+++ b/home.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Welcome to the Web App</h1>
-    <p id="Client-info"></p>
     <button type="button" id="signOut">Log Out</button>
     <button type="button" id="addSum">Add</button>
+    <button type="button" id="geSum">Get</button>
+    <p id="Client-info"></p>
     
 </body>
 </html>
