--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <h1>Welcome to the Web App</h1>
     <button type="button" id="signOut">Log Out</button>
     <button type="button" id="addSum">Add</button>
-    <button type="button" id="geSum">Get</button>
+    <button type="button" id="getSum">Get</button>
     <p id="Client-info"></p>
     
 </body>
