--- a/home.html
+++ b/home.html
@@ -29,6 +29,16 @@
     <button type="button" id="applyFundingOpportunity">apply for FO</button>
     <h3>Displays all Applications to funding Opportunities at the bottom of the page</h3>
     <button type="button" id="showFundingOpportunityApplications">show applications for FO</button>
+    <div style="display: flex; justify-content: space-around; width: 100%;">
+        <div> 
+            <h3>Used to Accept an Application</h3>
+            <button type="button" id="Accept">Accept</button>
+        </div>
+        <div>
+            <h3>Used to Reject an Application</h3> 
+            <button type="button" id="Reject">Reject</button>
+        </div>
+    </div>
     <div>
         <h1> Status: <p id="Client-info"></p></h1>
     </div>
